front_end_update(included cards)

--- a/client/src/assets/main.scss
+++ b/client/src/assets/main.scss
@@ -1,1 +1,11 @@
-@import "~bulma/bulma"
+@import "~bulma/bulma";
+
+.background{
+    background-color: #e0e0e0 !important;
+}
+.activetext{
+    color: #fff;
+}
+.activebackground{
+    background: #96afaf;
+}
